@@ -1,6 +1,12 @@
 
 
 Changes to 1.38.1:
+- Remove delete of CVS from all makefiles.
+- Fix seg fault when clicking on Add button in wx-console
+  restore panel.  Bug #470.
+- Fix copyright date and URL typo -- bug #468.
+- Change autostart install for FreeBSD to look for rc.conf  
+  rather than rc.local as suggested fix for bug #466.
 - Apply patch supplied by Eric Bollinger to fix PostgreSQL    
   grant on status. Bug #465
 - Apply patch supplied by Eric Bollinger to fix PostgreSQL
